// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home page matches snapshot 1`] = `
<DocumentFragment>
  <a
    class="link"
    href="/test"
  >
    <span>
      test
    </span>
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
      />
    </svg>
  </a>
</DocumentFragment>
`;

exports[`Home page matches snapshot with props 1`] = `
<DocumentFragment>
  <a
    class="link test"
    href="/test"
  >
    <span>
      test
    </span>
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
      />
    </svg>
  </a>
</DocumentFragment>
`;
